--- a/newabuot.html
+++ b/newabuot.html
@@ -42,10 +42,10 @@
               <nav id="nav" role="navigation">
                 <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
                 <ul class="clearfix">
-                  <li class="active"><a href="./index.html">
+                  <li><a href="./index.html">
                     <strong>Головна</strong></a>
                   </li>
-                  <li >
+                  <li class="active">
                     <a href="./newabuot.html"><strong>Про нас</strong></a>
                   </li>
                   <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
@@ -85,7 +85,7 @@
         </div><!--conteiner-->
       <div class="conteiner two">
         <div class="row">
-          <h1 class="text-center">Дещо про наші заняття</h1>
+          <h2 class="text-center">Дещо про наші заняття</h2>
           <div class="col-xs-12 col-sm-6">
             <div class="block"><p>1.</p></div>
             <p class="text">
@@ -98,47 +98,44 @@
           </div><!--col-sm-6-->
         </div><!--row-->
       </div><!--conteiner-->
-
-
-
-          <div class="container three">
-          <div class="row">
-            <h1 class="text-center">Наші правила</h1>
-            <div class="col-sm-4">
+      <div class="conteiner three">
+        <div class="row">
+          <h2 class="text-center">Наші правила</h2>
+            <div class="col-xs-12 col-md-4">
               <div class="thumbnail">
                 <img src="./images2/sam.png" class="img-rounded">
                 <div class="caption">
-                  <h3 class="text-center">Правило самостійності </h3>
+                  <h3 class="text-center gellery">Cамостійність </h3>
                   <p>
 Ми заохочуємо батьків брати активну участь в житті та розвитку «Посмішки». Батьки можуть бути присутніми на заняттях, для безпеки і спокою дітей.
-Однак важливо давати достатньо свободи дитині у виборі діяльності, особливо в час вільної гри, так як ми практикуємо методики Монтессорі.</p>
+Однак важливо давати достатньо свободи дитині у виборі діяльності, особливо в час вільної гри, так як ми практикуємо методики Монтессорі. Під час гри та навчання вашим малюкам буде цікаво і комфортно.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->
             </div><!--col-md-4-->
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-md-4">
               <div class="thumbnail">
                 <img src="./images2/ab2.png" class="img-rounded">
                 <div class="caption">
-                  <h3 class="text-center">Дисципліна</h3>
+                  <h3 class="text-center gellery">Дисципліна</h3>
                   <p>
-Вихователі «Посмішки» відповідають за підтримання порядку в класі. Вихователі мають право вимагати дотримання дисципліни в дітей, які заважають навчальному процесу і завдають шкоди іншим.«Посмішка» має строгу політику проти застосування тілесних покарань і буде ставитись до Ваших дітей з гідністю і повагою.
+Вихователі «Посмішки» відповідають за підтримання порядку в класі. Вихователі мають право вимагати дотримання дисципліни в дітей, які заважають навчальному процесу і завдають шкоди іншим. «Посмішка» має строгу політику проти застосування тілесних покарань і буде ставитись до Ваших дітей з гідністю і повагою.
 </p>
                 </div><!--caption-->
               </div><!--thumbnail-->
             </div><!--col-md-4-->
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-md-4">
               <div class="thumbnail">
                 <img src="./images2/dus.png" class="img-rounded">
                 <div class="caption">
-                  <h3 class="text-center">Пунктуальність</h3>
+                  <h3 class="text-center gellery">Пунктуальність</h3>
                   <p>
 Важливо, щоб дитина приходила на заняття вчасно. Якщо батьки залишають дитину в групі, то вони, чи інші дорослі, яким дозволено забирати дитину, мають прийти вчасно на закінчення заняття. Якщо Ви прийшли раніше, зачекайте, будь ласка за дверима, щоб не відволікати дітей від заняття. 
 </p>
                 </div><!--caption-->
               </div><!--thumbnail-->
-            </div><!--col-md-4--> 
+            </div><!--col-md-4-->
           </div><!--row-->
-        </div><!--container-->
+        </div><!--conteiner-->
       </div><!--middle-->
 <!--_______footer___________-->
       <footer>
