--- a/newprograms.html
+++ b/newprograms.html
@@ -68,7 +68,7 @@
           </div><!--row-->
         </div><!--conteiner-->
       </header><!--header-->
-<!--middle-->       
+<!--__________middle__________-->       
       <div class="middle">
         <div class="conteiner blok">
           <div class="row">
@@ -86,45 +86,45 @@
             </div><!--col-md-4-->
           </div><!-row-->
         </div><!--conteiner-->
-        <div class="container programs">
+        <div class="conteiner programs">
           <div class="row">
-            <h1><strong>Спеціальні програми</strong></h1>
+            <h2><strong>Спеціальні програми</strong></h2>
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/english1.jpg">
-            </div>
-            <div class="col-sm-4 english">
+            </div><!--col-sm-2-->
+            <div class="col-xs-12 col-sm-4 english">
               <h4>Вивчення Англійської мови</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
-            </div>
+            </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-2">
-              <img src="./images2/spanish1.jpg">
-            </div>
-            <div class="col-sm-4 spanish">
+              <img src="./images2/spanish_1.jpg">
+            </div><!--col-sm-2-->
+            <div class="col-xs-12 col-sm-4 spanish">
               <h4>Вивчення Іспанської мови</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
-            </div>
-          </div>
-        </div>
-         <div class="container prog">
+            </div><!--col-sm-4-->
+          </div><!--row-->
+        </div><!--conteiner-->
+        <div class="conteiner prog">
           <div class="row">
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/english4.jpg">
-            </div>
-            <div class="col-sm-4 english">
+            </div><!--col-sm-2-->
+            <div class="col-xs-12 col-sm-4 english">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
-            </div>
+            </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/english3.jpg">
-            </div>
-            <div class="col-sm-4 spanish">
+            </div><!--col-sm-2-->
+            <div class="col-xs-12 col-sm-4">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
-             </div>
-          </div>
-        </div>
+            </div><!--col-sm-4-->
+          </div><!--row-->
+        </div><!--conteiner-->
         <div class="conteiner addschool">
           <div class="row">
             <div class="col-sm-12">
-              <h2>Підготовка до школи</h2>
+              <h2><strong>Підготовка до школи</strong></h2>
             </div>
           </div>
         </div>
@@ -148,10 +148,8 @@
             </div>
           </div>
         </div>
-
-
       </div><!--middle--> 
-
+<!--________footer_______--> 
       <footer class="footer">
         <div class="container">
           <div class="row">
