--- a/newprograms.html
+++ b/newprograms.html
@@ -45,10 +45,10 @@
                   <li><a href="./index.html">
                     <strong>Головна</strong></a>
                   </li>
-                  <li class="active">
+                  <li>
                     <a href="./newabuot.html"><strong>Про нас</strong></a>
                   </li>
-                  <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                  <li class="active"> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
                     <ul>
                       <li><a href="./newprograms.html">Підготовка до школи</a>
                       </li>
@@ -82,7 +82,7 @@
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 camp">
               <h2>Літній<br> табір</h2>
-              <p>Integer vel euismod velit. Integer tempus tortor quis accumsan suscipit. Phasellus convallis mauris sodales nibh rhoncus, a lacinia elit congue. Donec ut interdum ligula, quis vestibulum arcu. Proin iaculis bibendum eros ut auctor. Sed facilisis enim in risus lacinia, et sollicitudin ante sollicitufdgfdin. sdvfsdgd</p>
+              <p>Кожного літа ми запрошуємо до нас команду американців. Вони проводять дитячий християнський табір. Табір відбувається англійською мовою. Наші волонтери перекладають діткам. Усі разом ми вивчаємо біблійні історії, ставимо сценки, співаємо, малюємо, готуємо, граємо та радіємо.</p>
             </div><!--col-md-4-->
           </div><!-row-->
         </div><!--conteiner-->
