--- a/newstaff.html
+++ b/newstaff.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cадочок Посмішка</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
@@ -10,165 +11,143 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-7">
-<!--Головний напис-->
-                <h1 class="text-left">Домашній xристиянський</h1>
-                <h1 class="txt_napus2">садочок</h1>
-                <h1 class="txt_napus1"><strong>Посмішка</strong></h1>
-              </div>                  
-            <div class="col-sm-5">
-<!--Контакти-->
-              <address>
-                <abbr title="Phone">
-                  <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-                </abbr> (093) 839-7139 -Еріка
-              </address>
-              <address>
-                <a href="mailto:#">erika.ucu@gmail.com</a>
-              </address>
-            </div>
-          </div>
-        </div>            
-      </div>
-<!--nav-->          
-      <nav>
-        <div class="container">
+<!--________header_______-->
+    <header class="header">
+      <div class="conteiner logo">
+        <div class="row">
+          <div class="col-xs-12 col-sm-7">
+            <h1 class="text-left">Домашній xристиянський<br>
+              <small class="small">садочок</small>
+            </h1>
+             <h1 class="text-left posmishka"><strong>посмішка</strong>
+             </h1>
+          </div><!--col-md-7-->
+          <div class="col-xs-12 col-sm-5 address1">
+             <address class="ad1">
+               <abbr title="Phone">
+                <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+              </abbr> (093) 839-7139 -Еріка
+            </address>
+            <address>
+              <a href="mailto:#">erika.ucu@gmail.com</a>
+            </address>
+          </div><!--col-md-5-->
+         </div><!--row-->
+        </div><!--conteiner-->
+<!--_______navigation________-->
+        <div class="conteiner">
           <div class="row">
             <div class="col-sm-12">
-              <ul class="main-menu">
-                <li ><a href="./index.html">
-                  <strong>Головна</strong></a>
-                </li>
-                <li><a href="./newabuot.html">
-                  <strong>Про нас</strong></a>
-                </li>
-                <li class="dropdown"><a href="./newprograms.html" class="dropdown-toggle" data-toggle="dropdown">
-                  <strong>Програми</strong>
-                  <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li ><a href="./newprograms.html">Підготовка до школи</a>
-                    </li>
-                    <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="active">
-                  <a href="./newstaff.html"><strong>Наші вчителі</strong></a>
-                </li>
-                <li><a href="./newcontacts.html">
-                  <strong>Контакти</strong></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div> 
-<!-- Щоб створилась кнопка замість меню
-
-        <div class="btn-group">
-  <button class="btn  btn-warning">Головна</button>
-  <button class=" btn btn-warning" data-toggle="dropdown">
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Про нас</a></li>
-     <li><a href="#">Програми</a></li>
-      <li><a href="#">Наші вчителі</a></li>
-       <li><a href="#">Контакти</a></li>
-  </ul>
-</div>  -->
-      </nav>
+              <nav id="nav" role="navigation">
+                <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
+                <ul class="clearfix">
+                  <li><a href="./index.html">
+                    <strong>Головна</strong></a>
+                  </li>
+                  <li>
+                    <a href="./newabuot.html"><strong>Про нас</strong></a>
+                  </li>
+                  <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                    <ul>
+                      <li><a href="./newprograms.html">Підготовка до школи</a>
+                      </li>
+                      <li><a href="./newprograms.html">Англійська та іспанська з іноземцями</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="active">
+                    <a href="newstaff.html"><strong>Наші вчителі</strong></a>
+                  </li>
+                  <li>
+                    <a href="./newcontacts.html"><strong>Контакти</strong></a>
+                  </li>
+                </ul>
+              </nav>
+            </div><!--col-sm-12-->
+          </div><!--row-->
+        </div><!--conteiner-->
+      </header><!--header-->
+<!--_________middle___________-->
       <div class="middle">
         <h1 class="text-center">Наші вихователі</h1>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="thumbnail">
-                <img src="./images2/Erika.png" class="img-rounded">
+        <div class="conteiner">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <img src="./images2/Erika.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Еріка Татчин</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <p>Випускниця Українського Католицького Університету, мама двох донечок. Мріяла створити християнський садочок ще з шкільних років. До Посмішки Еріка працювала у садку св. Миколая вихователем у яслах та викладачем англійської мови.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->
-            </div><!--col-sm-4-->
-            <div class="col-sm-4">
-              <div class="thumbnail">
-                <img src="./images2/natalia.png" class="img-rounded">
+          </div><!--col-sm-4-->
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <img src="./images2/natalia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Наталя Лозак</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->
-            </div><!--col-sm-4-->
-            <div class="col-sm-4">  
-              <div class="thumbnail">
-                <img src="./images2/duvan.png" class="img-rounded">
+          </div><!--col-sm-4-->
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <img src="./images2/duvan.png" class="img-rounded">
                 <div class="caption">
-                  <h3 class="text-center">Duvan Vargas</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <h3 class="text-center">Дуван Варгас</h3>
+                  <p>Дуван приїхав з Колумбії восени 2016. У Львові він навчає іспанської дітей та дорослих, танцює сальсу та веде англомовне прославлення у християнській організації. В Колумбії Дуван викладав англійську в університеті столиці.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->  
             </div><!--col-sm-4-->
           </div><!--row-->
-        </div><!--container-->
-        <div class="container">
+        </div><!--conteiner-->
+        <div class="conteiner two">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-4">
               <div class="thumbnail">
                 <img src="./images2/joe.png" class="img-rounded">
                 <div class="caption">
-                  <h3 class="text-center">Joe Marasek</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <h3 class="text-center">Джоі Марасек</h3>
+                  <p>Джоі переїхав з Техасу декілька років тому. Він захоплюється фотографією та грою на гітарі. Має багатий досвід навчання англійської дітей різного віку. 
+                  </p>
                 </div><!--caption-->
               </div><!--thumbnail-->  
             </div><!--col-sm-4-->
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-4">
               <div class="thumbnail">
                 <img src="./images2/lesia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Леся Городиловська</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
                 </div><!--caption-->
-              </div><!--thumbnail-->  
+              </div><!--thumbnail-->          
             </div><!--col-sm-4-->
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-4">
               <div class="thumbnail">
                 <img src="./images2/svit.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Світлана Кір'янова</h3>
-                  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.
-</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
                 </div><!--caption-->
-              </div><!--thumbnail-->  
+              </div><!--thumbnail-->          
             </div><!--col-sm-4-->
           </div><!--row-->
-        </div><!--container-->
-        <div class="container">
+        </div><!--conteiner-->
+        <div class="conteiner">
           <div class="row">
-            <div class="col-sm-12">
-              <blockquote class="blockquote-reverse">
+            <div class="col-sm-12"> 
+               <blockquote class="blockquote-reverse">
               <p><strong>«Пустіть дітей! Не бороніть їм приходити до мене, бо таких Царство Небесне» </strong></p>
               <footer><cite title="(Мт. 19:13)">(Мт. 19:13)</cite></footer>
-            </blockquote>
-            </div><!--col-sm-12-->
+            </blockquote>          
+            </div><!--col-sm-12-->         
           </div><!--row-->
-        </div><!--container-->
+        </div><!--conteiner-->
+
       </div><!--middle-->
-    </div><!--middle-->
-        <footer class="footer">
+
+      <!--________footer_______--> 
+      <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
@@ -192,7 +171,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem 
             </div><!--col-sm-4-->
           </div><!--row-->
         </div><!--container-->
-      </footer><!-- .footer -->
+      </footer><!--footer -->
     </div><!--wrapper-->
    </body>
 </html>
